--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 :root {
     --light-blue: #88dffc;
-    --purple: #9626c9
+    --purple: #9626c9;
+    --green: #00ff00;
+    --red: #ff0000;
+    --dark-gray: #333333;
+    --dark-blue: #0000ff;
 }
 
 * {
@@ -10,30 +14,49 @@
     font-family: 'Times New Roman', Times, serif;
 }
 
+body{
+    background-color: var(--light-blue);
+}
 
 
-.quiz-content-wrapper {
+
+.quiz-container {
     margin: 10% auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    width: 80%;
+    width: 65%;
 
 
 }
 
-.quiz-content-buttons {
+.control-buttons {
     display: flex;
     justify-content: center;
 }
 
-.quiz-content-buttons button{
+
+.quiz-container button{
     background-color: var(--purple);
     border: none;
-    padding: 10px;
+    width: 100%;
+    padding: 50px;
     color: white;
+    border: 5px solid var(--dark-gray);
     margin: auto;
+    border-radius: 7px;
+}
+
+.quiz-container button:hover {
+    border-color: white;
+}
+
+.anwser-grid{
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(2,auto);
+    margin-bottom: 10px;
 }
 
 .question-text-wrapper {
