--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,12 @@ body{
     margin-bottom: 2rem;
 }
 
+.question-text {
+    display: flex;
+    justify-content: center;
+    font-size: 24px;
+}
+
 /* .btn {
     
     margin: 5px;
